tests/errors/4_type_errors/boolop-test4.ifj16.java
class Main {
    static void run() {
        String a = false;  // only true/false possible
    }
}
